<resources>
    <string name="app_name">Surfmate</string>
    <string name="button_addSurfspot">Add Surf Spot</string>
    <string name="hint_surfspotTitle">Surf Spot Name</string>
    <string name="hint_surfspotDescription">Observations </string>
    <string name="menu_addSurfspot">Add</string>
    <string name="menu_cancelSurfspot">Cancel</string>
    <string name="enter_surfspot_title"> Please enter a Surf Spot Name </string>
    <string name="save_surfspot"> Save Surf Spot </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_surfspot_image">Select Surf Spot Image</string>
    <string name="change_surfspot_image">Change Surf Spot image</string>
    <string name="rating">Spot Rating</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="menu_deleteSurfspot">Delete</string>
    <string name="title_activity_surfmate_maps">Map Of All Surf Spots</string>
</resources>